--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   </head>
   <body>
-    <header>Website for facts</header>
+    <header>Website for facts about everything that interest me</header>
     <nav></nav>
     <aside></aside>
     <section> <article></article> </section>
