--- a/childPages/Koalasfact.html
+++ b/childPages/Koalasfact.html
@@ -16,7 +16,7 @@
 
   </head>
   <body>
-    <header>Template</header>
+    <header>50 Facts About Koalas</header>
     <nav></nav>
     <aside></aside>
     <section> <article></article> </section>
@@ -27,6 +27,6 @@
       <strong>A little nonsense now and then is relished by the wisest men.</strong>
       <em>- <a href="https://www.brainyquote.com/quotes/roald_dahl_161976" target="_blank">Roald Dahl</a></em>
     </p>
-    <p>&copy Github 2022</p>
+    <p>&copy 2022 GitHub, Inc.</p>
   </footer>
 </html>
