--- a/index.html
+++ b/index.html
@@ -12,21 +12,49 @@
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
 
-    <style> div {border:thin dotted red;} </style>
+<style>
+div {border:solid green;}
+* {box-sizing: border-box;}
+body {background-color:#FFCC99;}
+.header {border:1px solid red; padding:15px}
+.menu {width: 40%; float: left; padding: 15px; border: 1px solid #66BE42;}
+.main {width: 60%; float: middle; padding: 15px; border: 1px solid #66BE42;}
+</style>
 
   </head>
+
   <body>
-    <header>Website for facts about everything that interest me</header>
-    <nav></nav>
-    <aside></aside>
-    <section> <article></article> </section>
+    <div style="header">
+      <header>Website for facts about everything that interest me, </header>
+    </div>
+    <div style="menu">
+      <nav>
+        <a href="Animals.html" target="_blank">Animals</a>
+        <a href="Companies.html" target="_blank">Companies</a>
+        <a href="Games.html" target="_blank">Games</a>
+        <a href="Objects.html" target="_blank">Objects</a>
+        <a href="People.html" target="_blank">People</a>
+      </nav>
+    </div>
+    <section>
+      <article>
+        This repository's sole purpose is to only be made for a school assignment. The repository is
+        made unprofessionally, and so information coming from here should be perceived with a grain of
+        salt to you reading as to not be convinced of a fake lie if I had spread one as well inside one of
+        the subject of interest I called upon to.
+      </article>
+    </section>
+  </div>
+<div class="aside">
+<aside><p>The content here can be changed in any moment, with no semblence of a schedule</p></aside>
+</div>
   </body>
   <footer>
-    <blockquote cite="https://www.brainyquote.com/quotes/roald_dahl_161976"><!-- Date Access 08/02/2022 --></blockquote>
+        <blockquote cite="https://www.forbes.com/quotes/author/frederick-h-ecker/"><!-- Date Access 01/03/2022 --></blockquote>
     <p>
-      <strong>A little nonsense now and then is relished by the wisest men.</strong>
-      <em>- <a href="https://www.brainyquote.com/quotes/roald_dahl_161976" target="_blank">Roald Dahl</a></em>
-    </p>
-    <p>&copy Github 2022</p>
+  <strong>Facts are the most important thing in business. Study facts and do more than is expected of you.</strong>
+        <em><a href="https://www.forbes.com/quotes/author/frederick-h-ecker/" target="_blank">Frederick H. Ecker</a></em>
+</p>
+    <p>&copy 2022 GitHub, Inc.</p>
   </footer>
 </html>
