--- a/index.html
+++ b/index.html
@@ -24,24 +24,22 @@ body {background-color:#FFCC99;}
   </head>
 
   <body>
+    <div style="main">Welcome, be sure to have a wonderful time in this repository</div>
     <div style="header">
-      <header>Website for facts about everything that interest me, </header>
+      <header><h1 style="font-size:5.5vw">Website for facts about everything that interest me, </header>
     </div>
     <div style="menu">
       <nav>
-        <a href="Animals.html" target="_blank">Animals</a>
-        <a href="Companies.html" target="_blank">Companies</a>
-        <a href="Games.html" target="_blank">Games</a>
-        <a href="Objects.html" target="_blank">Objects</a>
-        <a href="People.html" target="_blank">People</a>
+        <a href="childPages/Purpose.html" target="_blank">Purpose of the website</a>
       </nav>
     </div>
     <section>
       <article>
-        This repository's sole purpose is to only be made for a school assignment. The repository is
-        made unprofessionally, and so information coming from here should be perceived with a grain of
-        salt to you reading as to not be convinced of a fake lie if I had spread one as well inside one of
-        the subject of interest I called upon to.
+        <li style="font-style:1vw"><a href="childPages/Animals.html" target="_blank">Animals</a>
+        <li style="font-style:1vw"><a href="childPages/Companies.html" target="_blank">Companies</a>
+        <li style="font-style:1vw"><a href="childPages/Games.html" target="_blank">Games</a>
+        <li style="font-style:1vw"><a href="childPages/Objects.html" target="_blank">Objects</a>
+        <li style="font-style:1vw"><a href="childPages/People.html" target="_blank">People</a>
       </article>
     </section>
   </div>
