--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <style>
 div {border:solid green;}
 * {box-sizing: border-box;}
-body {background-color:#FFCC99;}
+body {background-color:#E9C46A;}
 .header {border:1px solid red; padding:15px}
-.menu {width: 40%; float: left; padding: 15px; border: 1px solid #66BE42;}
-.main {width: 60%; float: middle; padding: 15px; border: 1px solid #66BE42;}
+.menu {width: 25%; float: left; padding: 15px; border: 1px solid #F4A261;}
+.main {width: 75%; float: left; padding: 15px; border: 1px solid #F4A261;}
 </style>
 
   </head>
