--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@ body {background-color:#E9C46A;}
   </head>
 
   <body>
-    <div style="main">Welcome, be sure to have a wonderful time in this repository</div>
     <div style="header">
-      <header><h1 style="font-size:5.5vw">Website for facts about everything that interest me, </header>
+      <header><h1 style="font-size:4.5vw">Website for facts about everything that interest me, </header>
     </div>
     <div style="menu">
       <nav>
         <a href="childPages/Purpose.html" target="_blank">Purpose of the website</a>
       </nav>
     </div>
+    <div style="main">
     <section>
       <article>
         <li style="font-style:1vw"><a href="childPages/Animals.html" target="_blank">Animals</a>
