--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <style>
 div {border:solid green;}
 * {box-sizing: border-box;}
-body {background-color:#E9C46A;}
+body {background-color:#F8F2BB;}
 .header {border:1px solid red; padding:15px}
 .menu {width: 25%; float: left; padding: 15px; border: 1px solid #F4A261;}
 .main {width: 75%; float: left; padding: 15px; border: 1px solid #F4A261;}
@@ -29,17 +29,20 @@ body {background-color:#E9C46A;}
     </div>
     <div style="menu">
       <nav>
-        <a href="childPages/Purpose.html" target="_blank">Purpose of the website</a>
+        <h3><a href="childPages/Purpose.html" target="_blank">Purpose of the website</a></h3>
       </nav>
     </div>
     <div style="main">
     <section>
       <article>
+        <p style="font-style:1vw"> Categories:</p>
+<ol style="font-style:1vw "type="A">
         <li style="font-style:1vw"><a href="childPages/Animals.html" target="_blank">Animals</a>
         <li style="font-style:1vw"><a href="childPages/Companies.html" target="_blank">Companies</a>
         <li style="font-style:1vw"><a href="childPages/Games.html" target="_blank">Games</a>
         <li style="font-style:1vw"><a href="childPages/Objects.html" target="_blank">Objects</a>
         <li style="font-style:1vw"><a href="childPages/People.html" target="_blank">People</a>
+        </ol>
       </article>
     </section>
   </div>
