--- a/childPages/Purpose.html
+++ b/childPages/Purpose.html
@@ -16,13 +16,10 @@
 
   </head>
   <body>
-    <header>The purpose of the website</header>
+    <header><h1>The purpose of the website</h1></header>
     <section>
       <article>
-        This repository's sole purpose is to only be made for a school assignment. The repository is
-        made unprofessionally, and so information coming from here should be perceived with a grain of
-        salt to you reading as to not be convinced of a fake lie if I had spread one as well inside one of
-        the subject of interest I called upon to.
+        <p>This repository's sole purpose is to only be made for a school assignment. The repository is made unprofessionally, and so information coming from here should be perceived with a grain of salt to you reading as to not be convinced of a fake lie if I had spread one as well inside one of the subject of interest I called upon to.</p>
       </article>
     </section>
   </body>
