--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
 
 <style>
-div {border:solid green;}
+div {border:solid #F4A261;}
 * {box-sizing: border-box;}
 body {background-color:#F8F2BB;}
 .header {border:1px solid red; padding:15px}
