--- a/childPages/Animals.html
+++ b/childPages/Animals.html
@@ -17,16 +17,105 @@
 
   </head>
   <body>
-    <div style="header"<header>WIP</header></div>
-    <nav></nav>
-    <aside></aside>
-    <section> <article></article> </section>
+    <div style="header"><header><h1 style="font-style:1vw">Facts about Animals</h1></header></div>
+    <section>
+      <article>
+        <p style="font-style:1vw"> Categories:</p>
+    <ol style="font-style:1vw "type="A">
+      <li>Alpaca
+      <li>Ant
+      <li>Axolotl
+      <li>Baboon
+      <li>Badger
+      <li>Basilisk
+      <li>Bat
+      <li>Bear
+      <li>Bee
+      <li>Beetle
+      <li>Beaver
+      <li>Bison
+      <li>Butterfly
+      <li>Capybara
+      <li>Cheetah
+      <li>Crab
+      <li>Crocodile
+        Deer
+        Dog
+        Dolphin
+        Dragonfly
+        Duck
+        Eagle
+        Elephant
+        Eel
+        Falcon
+        Ferret
+        Flamingo
+        Frog
+        Gorilla
+        Horse
+        Hedgehog
+        Jellyfish
+        Jackal
+        Kangaroo
+        Koi
+      <li style="font-style:1vw"><a href="childPages/Koalas.html" target="_blank">Koalas</a>
+        Komodo Dragon
+        Leopard
+        Lion
+        Ladybug
+        Octopus
+        Owl
+        Parrot
+        Penguin
+        Platypus
+        Polar bear
+        Raccoon
+        Reindeer
+        Rabbit
+        Raven
+        Red Panda
+        Salamander
+        Salmon
+        Sea Slug
+        Sea Turtle
+        Seahorse
+        Slug
+        Snake
+        Snowy Owl
+        Sponge
+        Squirrel
+        Stick Insect
+        Stork
+        Tiger shark
+        Weasel
+        Wolf
+        Woodpecker
+        Walrus
+            </article>
+          </section>
+          <div class="aside">
+          <aside><p>The finished pages are coloured with blue</p></aside>
+          </div>
   </body>
   <footer>
-    <blockquote cite="https://www.brainyquote.com/quotes/roald_dahl_161976"><!-- Date Access 08/02/2022 --></blockquote>
+    <blockquote cite="https://www.quotemaster.org/q99bbf213167f22241de1351b66b4833f"><!-- Date Access 01/03/2022 --></blockquote>
     <p>
-      <strong>A little nonsense now and then is relished by the wisest men.</strong>
-      <em>- <a href="https://www.brainyquote.com/quotes/roald_dahl_161976" target="_blank">Roald Dahl</a></em>
+      <strong>"I think I could turn and live with the animals, they are so placid and self contained;
+
+I stand and look at them long and long.
+
+They do not sweat and whine about their condition;
+
+They do not lie awake in the dark and weep for their sins;
+
+They do not make me sick discussing their duty to God;
+
+Not one is dissatisfied-not one is demented with the mania of owning things;
+
+Not one kneels to another, nor his kind that lived thousands of years ago;
+
+Not one is responsible or industrious over the whole earth." ― Walt Whitman</strong>
+      <em>- <a href="https://www.quotemaster.org/q99bbf213167f22241de1351b66b4833f" target="_blank">Walt Whitman</a></em>
     </p>
     <p>&copy Github 2022</p>
   </footer>
