--- a/childPages/Objects.html
+++ b/childPages/Objects.html
@@ -17,7 +17,7 @@
 
   </head>
   <body>
-    <div style="header"<header>WIP</header></div>
+    <div style="header"><header>WIP</header></div>
     <nav></nav>
     <aside></aside>
     <section> <article></article> </section>
