--- a/childPages/Purpose.html
+++ b/childPages/Purpose.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
 
-    <style> div {border:thin dotted red;} </style>
+    <style></style>
 
   </head>
   <body>
