--- a/childPages/Animals.html
+++ b/childPages/Animals.html
@@ -4,7 +4,7 @@
     <!-- Used by keyboard -->
     <meta charset="utf-8">
 
-    <title>Template</title>
+    <title>Animals</title>
 
     <!-- Used by the browser or Google search-->
     <meta name="author" content="Me and no one else">
@@ -22,101 +22,94 @@
       <article>
         <p style="font-style:1vw"> Categories:</p>
     <ol style="font-style:1vw "type="A">
-      <li>Alpaca
-      <li>Ant
-      <li>Axolotl
-      <li>Baboon
-      <li>Badger
-      <li>Basilisk
-      <li>Bat
-      <li>Bear
-      <li>Bee
-      <li>Beetle
-      <li>Beaver
-      <li>Bison
-      <li>Butterfly
-      <li>Capybara
-      <li>Cheetah
-      <li>Crab
-      <li>Crocodile
-        Deer
-        Dog
-        Dolphin
-        Dragonfly
-        Duck
-        Eagle
-        Elephant
-        Eel
-        Falcon
-        Ferret
-        Flamingo
-        Frog
-        Gorilla
-        Horse
-        Hedgehog
-        Jellyfish
-        Jackal
-        Kangaroo
-        Koi
+      <li style=color:#FF0000; style=font-style:1vw>Alpaca
+      <li style=color:#FF0000; style=font-style:1vw>Ant
+      <li style=color:#FF0000; style=font-style:1vw>Axolotl
+      <li style=color:#FF0000; style=font-style:1vw>Baboon
+      <li style=color:#FF0000; style=font-style:1vw>Badger
+      <li style=color:#FF0000; style=font-style:1vw>Basilisk
+      <li style=color:#FF0000; style=font-style:1vw>Bat
+      <li style=color:#FF0000; style=font-style:1vw>Bear
+      <li style=color:#FF0000; style=font-style:1vw>Bee
+      <li style=color:#FF0000; style=font-style:1vw>Beetle
+      <li style=color:#FF0000; style=font-style:1vw>Beaver
+      <li style=color:#FF0000; style=font-style:1vw>Bison
+      <li style=color:#FF0000; style=font-style:1vw>Butterfly
+      <li style=color:#FF0000; style=font-style:1vw>Capybara
+      <li style=color:#FF0000; style=font-style:1vw>Cheetah
+      <li style=color:#FF0000; style=font-style:1vw>Crab
+      <li style=color:#FF0000; style=font-style:1vw>Crocodile
+      <li style=color:#FF0000; style=font-style:1vw>Deer
+      <li style=color:#FF0000; style=font-style:1vw>Dog
+      <li style=color:#FF0000; style=font-style:1vw>Dolphin
+      <li style=color:#FF0000; style=font-style:1vw>Dragonfly
+      <li style=color:#FF0000; style=font-style:1vw>Duck
+      <li style=color:#FF0000; style=font-style:1vw>Eagle
+      <li style=color:#FF0000; style=font-style:1vw>Elephant
+      <li style=color:#FF0000; style=font-style:1vw>Eel
+      <li style=color:#FF0000; style=font-style:1vw>Falcon
+      <li style=color:#FF0000; style=font-style:1vw>Ferret
+      <li style=color:#FF0000; style=font-style:1vw>Flamingo
+      <li style=color:#FF0000; style=font-style:1vw>Frog
+      <li style=color:#FF0000; style=font-style:1vw>Gorilla
+      <li style=color:#FF0000; style=font-style:1vw>Horse
+      <li style=color:#FF0000; style=font-style:1vw>Hedgehog
+      <li style=color:#FF0000; style=font-style:1vw>Jellyfish
+      <li style=color:#FF0000; style=font-style:1vw>Jackal
+      <li style=color:#FF0000; style=font-style:1vw>Kangaroo
+      <li style=color:#FF0000; style=font-style:1vw>Koi
       <li style="font-style:1vw"><a href="childPages/Koalas.html" target="_blank">Koalas</a>
-        Komodo Dragon
-        Leopard
-        Lion
-        Ladybug
-        Octopus
-        Owl
-        Parrot
-        Penguin
-        Platypus
-        Polar bear
-        Raccoon
-        Reindeer
-        Rabbit
-        Raven
-        Red Panda
-        Salamander
-        Salmon
-        Sea Slug
-        Sea Turtle
-        Seahorse
-        Slug
-        Snake
-        Snowy Owl
-        Sponge
-        Squirrel
-        Stick Insect
-        Stork
-        Tiger shark
-        Weasel
-        Wolf
-        Woodpecker
-        Walrus
+      <li style=color:#FF0000; style=font-style:1vw>Komodo Dragon
+      <li style=color:#FF0000; style=font-style:1vw>Leopard
+      <li style=color:#FF0000; style=font-style:1vw>Lion
+      <li style=color:#FF0000; style=font-style:1vw>Ladybug
+      <li style=color:#FF0000; style=font-style:1vw>Octopus
+      <li style=color:#FF0000; style=font-style:1vw>Owl
+      <li style=color:#FF0000; style=font-style:1vw>Parrot
+      <li style=color:#FF0000; style=font-style:1vw>Penguin
+      <li style=color:#FF0000; style=font-style:1vw>Platypus
+      <li style=color:#FF0000; style=font-style:1vw>Polar bear
+      <li style=color:#FF0000; style=font-style:1vw>Raccoon
+      <li style=color:#FF0000; style=font-style:1vw>Reindeer
+      <li style=color:#FF0000; style=font-style:1vw>Rabbit
+      <li style=color:#FF0000; style=font-style:1vw>Raven
+      <li style=color:#FF0000; style=font-style:1vw>Red Panda
+      <li style=color:#FF0000; style=font-style:1vw>Salamander
+      <li style=color:#FF0000; style=font-style:1vw>Salmon
+      <li style=color:#FF0000; style=font-style:1vw>Sea Slug
+      <li style=color:#FF0000; style=font-style:1vw>Sea Turtle
+      <li style=color:#FF0000; style=font-style:1vw>Seahorse
+      <li style=color:#FF0000; style=font-style:1vw>Slug
+      <li style=color:#FF0000; style=font-style:1vw>Snake
+      <li style=color:#FF0000; style=font-style:1vw>Snowy Owl
+      <li style=color:#FF0000; style=font-style:1vw>Sponge
+      <li style=color:#FF0000; style=font-style:1vw>Squirrel
+      <li style=color:#FF0000; style=font-style:1vw>Stick Insect
+      <li style=color:#FF0000; style=font-style:1vw>Stork
+      <li style=color:#FF0000; style=font-style:1vw>Tiger shark
+      <li style=color:#FF0000; style=font-style:1vw>Weasel
+      <li style=color:#FF0000; style=font-style:1vw>Wolf
+      <li style=color:#FF0000; style=font-style:1vw>Woodpecker
+      <li style=color:#FF0000; style=font-style:1vw>Walrus
             </article>
           </section>
-          <div class="aside">
-          <aside><p>The finished pages are coloured with blue</p></aside>
-          </div>
   </body>
+
   <footer>
     <blockquote cite="https://www.quotemaster.org/q99bbf213167f22241de1351b66b4833f"><!-- Date Access 01/03/2022 --></blockquote>
     <p>
-      <strong>"I think I could turn and live with the animals, they are so placid and self contained;
-
-I stand and look at them long and long.
-
-They do not sweat and whine about their condition;
-
-They do not lie awake in the dark and weep for their sins;
-
-They do not make me sick discussing their duty to God;
-
-Not one is dissatisfied-not one is demented with the mania of owning things;
-
-Not one kneels to another, nor his kind that lived thousands of years ago;
-
-Not one is responsible or industrious over the whole earth." ― Walt Whitman</strong>
+      <strong>
+<p>"I think I could turn and live with the animals, they are so placid and self contained;</p>
+</p>I stand and look at them long and long. </p>
+<p>They do not sweat and whine about their condition;</p>
+<p>They do not lie awake in the dark and weep for their sins;</p>
+<p>They do not make me sick discussing their duty to God;</p>
+<p>Not one is dissatisfied-not one is demented with the mania of owning things;</p>
+<p>Not one kneels to another, nor his kind that lived thousands of years ago;</p>
+<p>Not one is responsible or industrious over the whole earth." ― Walt Whitman</p></strong>
       <em>- <a href="https://www.quotemaster.org/q99bbf213167f22241de1351b66b4833f" target="_blank">Walt Whitman</a></em>
     </p>
     <p>&copy Github 2022</p>
   </footer>
+
 </html>
