--- a/childPages/People.html
+++ b/childPages/People.html
@@ -4,7 +4,7 @@
     <!-- Used by keyboard -->
     <meta charset="utf-8">
 
-    <title>Template</title>
+    <title>People</title>
 
     <!-- Used by the browser or Google search-->
     <meta name="author" content="Me and no one else">
