--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ body {background-color:#F8F2BB;}
     </div>
     <div style="menu">
       <nav>
-        <h3><a href="childPages/Purpose.html" target="_blank">Purpose of the website</a></h3>
+        <h3><a href="childPages/Purpose.html" target="_blank">Purpose</a></h3>
+        <h3><a href="childPages/Status.html" target="_blank">Staus</a></h3>
       </nav>
     </div>
     <div style="main">
