--- a/childPages/Animals.html
+++ b/childPages/Animals.html
@@ -12,8 +12,12 @@
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
 
-    <style> div {border:solid green;}
-    .header {border:1px solid red; padding:15px}</style>
+    <style>
+    div {border:solid #33AB5F;}
+    * {box-sizing: border-box;}
+    body {background-color:#8CDBA9;}
+    .header {border:1px solid red; padding:15px}
+  </style>
 
   </head>
   <body>
