--- a/childPages/Companies.html
+++ b/childPages/Companies.html
@@ -12,12 +12,17 @@
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
 
-    <style> div {border:solid green;}
-    .header {border:1px solid red; padding:15px}</style>
+    <style>
+    <blockquote cite="https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg">
+    /* Date accessed 01/03/2022*/
+    <blockquote>
+  body {background-image: url('https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; alt="C:..\aaaaaa\Images"}
+  div {border:solid white;}
+    .header {border:1px solid white; padding:15px}</style>
 
   </head>
   <body>
-    <div style="header"><header>WIP</header></div>
+    <div style="header"><header><h7 style="color:#FFFFFF"WIP</header></div>
     <nav></nav>
     <aside></aside>
     <section> <article></article> </section>
