--- a/childPages/Animals.html
+++ b/childPages/Animals.html
@@ -62,7 +62,7 @@
       <li style=color:#FF0000; style=font-style:1vw>Jackal
       <li style=color:#FF0000; style=font-style:1vw>Kangaroo
       <li style=color:#FF0000; style=font-style:1vw>Koi
-      <li style="font-style:1vw"><a href="childPages/Koalas.html" target="_blank">Koalas</a>
+      <li style="font-style:1vw"><a href="childPages/Koalasfact.html" target="_blank">Koalas</a>
       <li style=color:#FF0000; style=font-style:1vw>Komodo Dragon
       <li style=color:#FF0000; style=font-style:1vw>Leopard
       <li style=color:#FF0000; style=font-style:1vw>Lion
