--- a/childPages/Companies.html
+++ b/childPages/Companies.html
@@ -22,7 +22,7 @@
 
   </head>
   <body>
-    <div style="header"><header><h7 style="color:#FFFFFF"WIP</header></div>
+    <div style="header"><header><h6 style=color:#FFFFFF; style="font-style:1vw">WIP</header></div>
     <nav></nav>
     <aside></aside>
     <section> <article></article> </section>
