--- a/childPages/Status.html
+++ b/childPages/Status.html
@@ -20,7 +20,7 @@
     <section>
       <article>
         <p style=color:#FF0000; style=font-style:1vw> The red color symbolizes the page haven't been made
-        <p style=color:#FF5733; style=font-style:1vw> The purple color symbolizes that the page have been made, but it currently WIP
+        <p style=color:#FF5733; style=font-style:1vw> The lighter red color symbolizes that the page have been made, but it currently WIP
         <p style=color:#0000FF; style=font-style:1vw> The blue color symbolizes that the page have been made, and is fully realized
       </article>
     </section>
