--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@ body {background-color:#F8F2BB;}
 
   <body>
     <div style="header">
-      <header><h1 style="font-size:4.5vw">Website for facts about everything that interest me, </header>
+      <header><h1 style="font-size:4vw">Website for facts about everything that interest me, </header>
     </div>
     <div style="menu">
       <nav>
         <h3><a href="childPages/Purpose.html" target="_blank">Purpose</a></h3>
-        <h3><a href="childPages/Status.html" target="_blank">Staus</a></h3>
+        <h3><a href="childPages/Status.html" target="_blank">Status</a></h3>
       </nav>
     </div>
     <div style="main">
