--- a/childPages/People.html
+++ b/childPages/People.html
@@ -16,7 +16,7 @@
     <blockquote cite="https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg">
     /* Date accessed 01/03/2022*/
     <blockquote>
-  body {background-image: url('https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; alt="C:..\aaaaaa\Images"}
+  body {background-image: url('https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover}
   div {border:solid white;}
     .header {border:1px solid white; padding:15px}</style>
 
