--- a/childPages/Animals.html
+++ b/childPages/Animals.html
@@ -26,75 +26,75 @@
       <article>
         <p style="font-style:1vw"> Categories:</p>
     <ol style="font-style:1vw "type="A">
-      <li style=color:#FF0000; style=font-style:1vw>Alpaca
-      <li style=color:#FF0000; style=font-style:1vw>Ant
-      <li style=color:#FF0000; style=font-style:1vw>Axolotl
-      <li style=color:#FF0000; style=font-style:1vw>Baboon
-      <li style=color:#FF0000; style=font-style:1vw>Badger
-      <li style=color:#FF0000; style=font-style:1vw>Basilisk
-      <li style=color:#FF0000; style=font-style:1vw>Bat
-      <li style=color:#FF0000; style=font-style:1vw>Bear
-      <li style=color:#FF0000; style=font-style:1vw>Bee
-      <li style=color:#FF0000; style=font-style:1vw>Beetle
-      <li style=color:#FF0000; style=font-style:1vw>Beaver
-      <li style=color:#FF0000; style=font-style:1vw>Bison
-      <li style=color:#FF0000; style=font-style:1vw>Butterfly
-      <li style=color:#FF0000; style=font-style:1vw>Capybara
-      <li style=color:#FF0000; style=font-style:1vw>Cheetah
-      <li style=color:#FF0000; style=font-style:1vw>Crab
-      <li style=color:#FF0000; style=font-style:1vw>Crocodile
-      <li style=color:#FF0000; style=font-style:1vw>Deer
-      <li style=color:#FF0000; style=font-style:1vw>Dog
-      <li style=color:#FF0000; style=font-style:1vw>Dolphin
-      <li style=color:#FF0000; style=font-style:1vw>Dragonfly
-      <li style=color:#FF0000; style=font-style:1vw>Duck
-      <li style=color:#FF0000; style=font-style:1vw>Eagle
-      <li style=color:#FF0000; style=font-style:1vw>Elephant
-      <li style=color:#FF0000; style=font-style:1vw>Eel
-      <li style=color:#FF0000; style=font-style:1vw>Falcon
-      <li style=color:#FF0000; style=font-style:1vw>Ferret
-      <li style=color:#FF0000; style=font-style:1vw>Flamingo
-      <li style=color:#FF0000; style=font-style:1vw>Frog
-      <li style=color:#FF0000; style=font-style:1vw>Gorilla
-      <li style=color:#FF0000; style=font-style:1vw>Horse
-      <li style=color:#FF0000; style=font-style:1vw>Hedgehog
-      <li style=color:#FF0000; style=font-style:1vw>Jellyfish
-      <li style=color:#FF0000; style=font-style:1vw>Jackal
-      <li style=color:#FF0000; style=font-style:1vw>Kangaroo
-      <li style=color:#FF0000; style=font-style:1vw>Koi
-      <li style="font-style:1vw"><a href="childPages/Koalasfact.html" target="_blank">Koalas</a>
-      <li style=color:#FF0000; style=font-style:1vw>Komodo Dragon
-      <li style=color:#FF0000; style=font-style:1vw>Leopard
-      <li style=color:#FF0000; style=font-style:1vw>Lion
-      <li style=color:#FF0000; style=font-style:1vw>Ladybug
-      <li style=color:#FF0000; style=font-style:1vw>Octopus
-      <li style=color:#FF0000; style=font-style:1vw>Owl
-      <li style=color:#FF0000; style=font-style:1vw>Parrot
-      <li style=color:#FF0000; style=font-style:1vw>Penguin
-      <li style=color:#FF0000; style=font-style:1vw>Platypus
-      <li style=color:#FF0000; style=font-style:1vw>Polar bear
-      <li style=color:#FF0000; style=font-style:1vw>Raccoon
-      <li style=color:#FF0000; style=font-style:1vw>Reindeer
-      <li style=color:#FF0000; style=font-style:1vw>Rabbit
-      <li style=color:#FF0000; style=font-style:1vw>Raven
-      <li style=color:#FF0000; style=font-style:1vw>Red Panda
-      <li style=color:#FF0000; style=font-style:1vw>Salamander
-      <li style=color:#FF0000; style=font-style:1vw>Salmon
-      <li style=color:#FF0000; style=font-style:1vw>Sea Slug
-      <li style=color:#FF0000; style=font-style:1vw>Sea Turtle
-      <li style=color:#FF0000; style=font-style:1vw>Seahorse
-      <li style=color:#FF0000; style=font-style:1vw>Slug
-      <li style=color:#FF0000; style=font-style:1vw>Snake
-      <li style=color:#FF0000; style=font-style:1vw>Snowy Owl
-      <li style=color:#FF0000; style=font-style:1vw>Sponge
-      <li style=color:#FF0000; style=font-style:1vw>Squirrel
-      <li style=color:#FF0000; style=font-style:1vw>Stick Insect
-      <li style=color:#FF0000; style=font-style:1vw>Stork
-      <li style=color:#FF0000; style=font-style:1vw>Tiger shark
-      <li style=color:#FF0000; style=font-style:1vw>Weasel
-      <li style=color:#FF0000; style=font-style:1vw>Wolf
-      <li style=color:#FF0000; style=font-style:1vw>Woodpecker
-      <li style=color:#FF0000; style=font-style:1vw>Walrus
+      <ul style=color:#FF0000; style=font-style:1vw>Alpaca
+      <ul style=color:#FF0000; style=font-style:1vw>Ant
+      <ul style=color:#FF0000; style=font-style:1vw>Axolotl
+      <ul style=color:#FF0000; style=font-style:1vw>Baboon
+      <ul style=color:#FF0000; style=font-style:1vw>Badger
+      <ul style=color:#FF0000; style=font-style:1vw>Basilisk
+      <ul style=color:#FF0000; style=font-style:1vw>Bat
+      <ul style=color:#FF0000; style=font-style:1vw>Bear
+      <ul style=color:#FF0000; style=font-style:1vw>Bee
+      <ul style=color:#FF0000; style=font-style:1vw>Beetle
+      <ul style=color:#FF0000; style=font-style:1vw>Beaver
+      <ul style=color:#FF0000; style=font-style:1vw>Bison
+      <ul style=color:#FF0000; style=font-style:1vw>Butterfly
+      <ul style=color:#FF0000; style=font-style:1vw>Capybara
+      <ul style=color:#FF0000; style=font-style:1vw>Cheetah
+      <ul style=color:#FF0000; style=font-style:1vw>Crab
+      <ul style=color:#FF0000; style=font-style:1vw>Crocodile
+      <ul style=color:#FF0000; style=font-style:1vw>Deer
+      <ul style=color:#FF0000; style=font-style:1vw>Dog
+      <ul style=color:#FF0000; style=font-style:1vw>Dolphin
+      <ul style=color:#FF0000; style=font-style:1vw>Dragonfly
+      <ul style=color:#FF0000; style=font-style:1vw>Duck
+      <ul style=color:#FF0000; style=font-style:1vw>Eagle
+      <ul style=color:#FF0000; style=font-style:1vw>Elephant
+      <ul style=color:#FF0000; style=font-style:1vw>Eel
+      <ul style=color:#FF0000; style=font-style:1vw>Falcon
+      <ul style=color:#FF0000; style=font-style:1vw>Ferret
+      <ul style=color:#FF0000; style=font-style:1vw>Flamingo
+      <ul style=color:#FF0000; style=font-style:1vw>Frog
+      <ul style=color:#FF0000; style=font-style:1vw>Gorilla
+      <ul style=color:#FF0000; style=font-style:1vw>Horse
+      <ul style=color:#FF0000; style=font-style:1vw>Hedgehog
+      <ul style=color:#FF0000; style=font-style:1vw>Jellyfish
+      <ul style=color:#FF0000; style=font-style:1vw>Jackal
+      <ul style=color:#FF0000; style=font-style:1vw>Kangaroo
+      <ul style=color:#FF0000; style=font-style:1vw>Koi
+      <ul style="font-style:1vw"><a href="childPages/Koalasfact.html" target="_blank">Koalas</a>
+      <ul style=color:#FF0000; style=font-style:1vw>Komodo Dragon
+      <ul style=color:#FF0000; style=font-style:1vw>Leopard
+      <ul style=color:#FF0000; style=font-style:1vw>Lion
+      <ul style=color:#FF0000; style=font-style:1vw>Ladybug
+      <ul style=color:#FF0000; style=font-style:1vw>Octopus
+      <ul style=color:#FF0000; style=font-style:1vw>Owl
+      <ul style=color:#FF0000; style=font-style:1vw>Parrot
+      <ul style=color:#FF0000; style=font-style:1vw>Penguin
+      <ul style=color:#FF0000; style=font-style:1vw>Platypus
+      <ul style=color:#FF0000; style=font-style:1vw>Polar bear
+      <ul style=color:#FF0000; style=font-style:1vw>Raccoon
+      <ul style=color:#FF0000; style=font-style:1vw>Reindeer
+      <ul style=color:#FF0000; style=font-style:1vw>Rabbit
+      <ul style=color:#FF0000; style=font-style:1vw>Raven
+      <ul style=color:#FF0000; style=font-style:1vw>Red Panda
+      <ul style=color:#FF0000; style=font-style:1vw>Salamander
+      <ul style=color:#FF0000; style=font-style:1vw>Salmon
+      <ul style=color:#FF0000; style=font-style:1vw>Sea Slug
+      <ul style=color:#FF0000; style=font-style:1vw>Sea Turtle
+      <ul style=color:#FF0000; style=font-style:1vw>Seahorse
+      <ul style=color:#FF0000; style=font-style:1vw>Slug
+      <ul style=color:#FF0000; style=font-style:1vw>Snake
+      <ul style=color:#FF0000; style=font-style:1vw>Snowy Owl
+      <ul style=color:#FF0000; style=font-style:1vw>Sponge
+      <ul style=color:#FF0000; style=font-style:1vw>Squirrel
+      <ul style=color:#FF0000; style=font-style:1vw>Stick Insect
+      <ul style=color:#FF0000; style=font-style:1vw>Stork
+      <ul style=color:#FF0000; style=font-style:1vw>Tiger shark
+      <ul style=color:#FF0000; style=font-style:1vw>Weasel
+      <ul style=color:#FF0000; style=font-style:1vw>Wolf
+      <ul style=color:#FF0000; style=font-style:1vw>Woodpecker
+      <ul style=color:#FF0000; style=font-style:1vw>Walrus
             </article>
           </section>
   </body>
