--- a/childPages/Companies.html
+++ b/childPages/Companies.html
@@ -18,6 +18,7 @@
     <blockquote>
   body {background-image: url('https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; alt="C:..\aaaaaa\Images"}
   div {border:solid white;}
+  /* Image alt is here to test, even if it shows Red*/
     .header {border:1px solid white; padding:15px}</style>
 
   </head>
