--- a/childPages/Games.html
+++ b/childPages/Games.html
@@ -21,7 +21,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover}
-  alt="c:../aaaaaa/Images" title="cover" style="max-width:cover;height:auto" 
+  alt="C:..\aaaaaa\Images" title="cover" style="max-width:cover;height:auto" 
   div {border:solid white;}
     .header {border:1px solid white; padding:15px}</style>
 
