--- a/childPages/Companies.html
+++ b/childPages/Companies.html
@@ -16,10 +16,14 @@
     <blockquote cite="https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg">
     /* Date accessed 01/03/2022*/
     <blockquote>
-  body {background-image: url('https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; alt="C:..\aaaaaa\Images"}
-  div {border:solid white;}
+    {background-image: url('https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover}
+    alt="C:..\aaaaaa-github.io\Images" title="cover" style="max-width:cover;height:auto"
+    div {border:solid white;}
+      .header {border:1px solid white; padding:15px}</style>
   /* Image alt is here to test, even if it shows Red*/
-    .header {border:1px solid white; padding:15px}</style>
 
   </head>
   <body>
