--- a/childPages/Animals.html
+++ b/childPages/Animals.html
@@ -62,7 +62,7 @@
       <ul style=color:#FF0000; style=font-style:1vw>Jackal
       <ul style=color:#FF0000; style=font-style:1vw>Kangaroo
       <ul style=color:#FF0000; style=font-style:1vw>Koi
-      <ul style="font-style:1vw"><a href="childPages/Koalasfact.html" target="_blank">Koalas</a>
+      <ul style="font-style:1vw"><a href="childPages\Koalasfact.html" target="_blank">Koalas</a>
       <ul style=color:#FF0000; style=font-style:1vw>Komodo Dragon
       <ul style=color:#FF0000; style=font-style:1vw>Leopard
       <ul style=color:#FF0000; style=font-style:1vw>Lion
