--- a/childPages/Koalasfact.html
+++ b/childPages/Koalasfact.html
@@ -18,14 +18,17 @@
   <body>
     <header>50 Facts About Koalas</header>
     <nav></nav>
-    <aside></aside>
+    <aside>
+      <p>Websites used:</p>
+      <blockquote cite="https://www.natgeokids.com/uk/discover/animals/general-animals/ten-facts-about-koalas/#:~:text=Facts%20about%20koalas.%201%201%29%20Koalas%20are%20found,uses%20its%20strong%20sense%20of%20...%20More%20items"></blockquote>
+      <p><em><a href="https://www.natgeokids.com/uk/discover/animals/general-animals/ten-facts-about-koalas/#:~:text=Facts%20about%20koalas.%201%201%29%20Koalas%20are%20found,uses%20its%20strong%20sense%20of%20...%20More%20items" target="_blank"></a></em><p>
+    </aside>
     <section> <article></article> </section>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/roald_dahl_161976"><!-- Date Access 08/02/2022 --></blockquote>
     <p>
-      <strong>A little nonsense now and then is relished by the wisest men.</strong>
-      <em>- <a href="https://www.brainyquote.com/quotes/roald_dahl_161976" target="_blank">Roald Dahl</a></em>
+
     </p>
     <p>&copy 2022 GitHub, Inc.</p>
   </footer>
