--- a/childPages/Animals.html
+++ b/childPages/Animals.html
@@ -106,7 +106,7 @@
     <p>
       <strong>
 <p>"I think I could turn and live with the animals, they are so placid and self contained;</p>
-</p>I stand and look at them long and long. </p>
+<p>I stand and look at them long and long. </p>
 <p>They do not sweat and whine about their condition;</p>
 <p>They do not lie awake in the dark and weep for their sins;</p>
 <p>They do not make me sick discussing their duty to God;</p>
