--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@ body {background-color:#F8F2BB;}
     <section>
       <article>
         <p style="font-style:1vw"> Categories:</p>
-<ol style="font-style:1vw "type="A">
-        <ul style=font-style:1vw><a href="childPages/Animals.html" target="_blank">Animals</a>
-        <ul style=color:#FF5733; style=font-style:1vw><a href="childPages/Companies.html" target="_blank">Companies</a>
-        <ul style=color:#FF5733; style=font-style:1vw><a href="childPages/Games.html" target="_blank">Games</a>
-        <ul style=color:#FF5733; style=font-style:1vw><a href="childPages/Objects.html" target="_blank">Objects</a>
-        <ul style=color:#FF5733; style=font-style:1vw><a href="childPages/People.html" target="_blank">People</a>
+          <ul>
+        <li style=font-style:1vw><a href="childPages/Animals.html" target="_blank">Animals</a>
+        <li style=color:#FF5733; style=font-style:1vw><a href="childPages/Companies.html" target="_blank">Companies</a>
+        <li style=color:#FF5733; style=font-style:1vw><a href="childPages/Games.html" target="_blank">Games</a>
+        <li style=color:#FF5733; style=font-style:1vw><a href="childPages/Objects.html" target="_blank">Objects</a>
+        <li style=color:#FF5733; style=font-style:1vw><a href="childPages/People.html" target="_blank">People</a>
+          <ul>
         </ol>
       </article>
     </section>
