--- a/childPages/Koalasfact.html
+++ b/childPages/Koalasfact.html
@@ -16,19 +16,23 @@
 
   </head>
   <body>
-    <header>50 Facts About Koalas</header>
-    <nav></nav>
+    <header>Numerous Facts of Koalas</header>
+    <section>
+      <article>  </article> 
+    </section>
     <aside>
       <p>Websites used:</p>
-      <blockquote cite="https://www.natgeokids.com/uk/discover/animals/general-animals/ten-facts-about-koalas/#:~:text=Facts%20about%20koalas.%201%201%29%20Koalas%20are%20found,uses%20its%20strong%20sense%20of%20...%20More%20items"></blockquote>
-      <p><em><a href="https://www.natgeokids.com/uk/discover/animals/general-animals/ten-facts-about-koalas/#:~:text=Facts%20about%20koalas.%201%201%29%20Koalas%20are%20found,uses%20its%20strong%20sense%20of%20...%20More%20items" target="_blank"></a></em><p>
+      <blockquote cite="https://www.natgeokids.com/uk/discover/animals/general-animals/ten-facts-about-koalas/#:~:text=Facts%20about%20koalas.%201%201%29%20Koalas%20are%20found,uses%20its%20strong%20sense%20of%20...%20More%20items"><!-- Date Accessed 01/03/2022 --></blockquote>
+      <p><em><a href="https://www.natgeokids.com/uk/discover/animals/general-animals/ten-facts-about-koalas/#:~:text=Facts%20about%20koalas.%201%201%29%20Koalas%20are%20found,uses%20its%20strong%20sense%20of%20...%20More%20items" target="_blank">National Geographics Kids</a></em><p>
+      <blockquote cite="https://onetreeplanted.org/blogs/stories/koala-facts"><!-- Date Accessed 01/03/2022  --><blockquote>
+      <p><em><a href="https://onetreeplanted.org/blogs/stories/koala-facts"> One Tree Planted </a></em></p>
+      <blockquote cite="https://www.wwf.org.au/news/blogs/10-interesting-facts-about-koalas"><!-- Date Accessed 01/03/2022 -->
+      <p><em><a href="https://www.wwf.org.au/news/blogs/10-interesting-facts-about-koalas">World Wide Fund For Nature</a></em></p>
     </aside>
-    <section> <article></article> </section>
   </body>
   <footer>
-    <blockquote cite="https://www.brainyquote.com/quotes/roald_dahl_161976"><!-- Date Access 08/02/2022 --></blockquote>
     <p>
-
+      <h1 style="font-style:1vw"Keep calm and love Koalas
     </p>
     <p>&copy 2022 GitHub, Inc.</p>
   </footer>
