--- a/childPages/Games.html
+++ b/childPages/Games.html
@@ -17,11 +17,10 @@
     /* Date accessed 01/03/2022*/
     <blockquote>
   body
-  {background-image: url('https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg');
+  body {background-image: url('https://i.kym-cdn.com/entries/icons/mobile/000/028/315/cover.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover}
-  alt="C:..\aaaaaa-github.io\Images" title="cover" style="max-width:cover;height:auto"
   div {border:solid white;}
     .header {border:1px solid white; padding:15px}</style>
 
